unpackaged/main/default/objects/Contract/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <inlineHelpText>Please enter the name of the account manager responsible for this provider.</inlineHelpText>
    <label>Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abbie Erdbrink</fullName>
            </value>
            <value>
                <fullName>Carl Hutchings</fullName>
            </value>
            <value>
                <fullName>Charles Coker</fullName>
            </value>
            <value>
                <fullName>Conar Pearson</fullName>
            </value>
            <value>
                <fullName>Jasmine Tavakoli</fullName>
            </value>
            <value>
                <fullName>Monika Meel</fullName>
            </value>
            <value>
                <fullName>Sam Davies</fullName>
            </value>
            <value>
                <fullName>Steph Ellis</fullName>
            </value>
            <value>
                <fullName>Stewart Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>