unpackaged/main/default/objects/Contract/fields/AM_Expiration_Notice__c.field-meta.xml
<CustomField>
    <fullName>AM_Expiration_Notice__c</fullName>
    <label>AM Expiration Notice</label>
    <type>Date</type>
</CustomField>