unpackaged/main/default/objects/Contract/fields/Booking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fee__c</fullName>
    <label>Booking Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>