unpackaged/main/default/objects/Contract/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>