unpackaged/main/default/objects/Contract/fields/Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the user profile of the contract owner.</inlineHelpText>
    <label>Contract Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractOwners</relationshipName>
    <type>Lookup</type>
</CustomField>