unpackaged/main/default/objects/Contract/fields/Contract_sent_by__c.field-meta.xml
<CustomField>
    <fullName>Contract_sent_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract sent by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>