unpackaged/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>This is to select the type of agreement we are sending to the Partner. The IPAA is to be sent to those who operate as an agency.</description>
    <inlineHelpText>This is to select the type of agreement we are sending to the Partner. The IPAA is to be sent to those who operate as an agency.</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Agency Agreement - PAA</fullName>
            </value>
            <value>
                <fullName>Intermediary Partner Agency Agreement - IPAA</fullName>
            </value>
            <value>
                <fullName>International Intermediary Partner Agency Agreement - IPAA (International)</fullName>
            </value>
            <value>
                <fullName>NDA (Non-Disclosure Agreement)</fullName>
            </value>
            <value>
                <fullName>Distribution Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>