unpackaged/main/default/objects/Contract/fields/Custom_Contract__c.field-meta.xml
<CustomField>
    <fullName>Custom_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you have customised the contact terms in any way.</description>
    <inlineHelpText>Check this box if you have customised the contact terms in any way.</inlineHelpText>
    <label>Custom Contract</label>
    <type>Checkbox</type>
</CustomField>