unpackaged/main/default/objects/Contract/fields/Customer_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_By__c</fullName>
    <label>Customer Signed By</label>
    <type>TextArea</type>
</CustomField>