unpackaged/main/default/objects/Contract/fields/Customer_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_Date__c</fullName>
    <label>Customer Signed Date</label>
    <type>Date</type>
</CustomField>