unpackaged/main/default/objects/Contract/fields/Customer_Signed_Title__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_Title__c</fullName>
    <label>Customer Signed Title</label>
    <type>TextArea</type>
</CustomField>