unpackaged/main/default/objects/Contract/fields/Data_Protection_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Email__c</fullName>
    <description>The email address for the data protection contact.</description>
    <inlineHelpText>Provide a direct email address for the data protection contact. This email will be used for any data protection-related communications.</inlineHelpText>
    <label>Data Protection Contact Email</label>
    <type>Email</type>
</CustomField>