unpackaged/main/default/objects/Contract/fields/Data_Protection_Contact_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Job_Title__c</fullName>
    <description>The job title of the data protection contact within a business.</description>
    <inlineHelpText>Provide the official job title of the data protection contact. Common titles include Data Protection Officer (DPO), Privacy Officer, or Compliance Manager.</inlineHelpText>
    <label>Data Protection Contact Job Title</label>
    <type>TextArea</type>
</CustomField>