unpackaged/main/default/objects/Contract/fields/Data_Protection_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Name__c</fullName>
    <description>The name of the person responsible for data protection and privacy within a business.</description>
    <inlineHelpText>Enter the full name of the individual who handles data protection and privacy matters for the company. This person will be the main contact for any data protection inquiries.</inlineHelpText>
    <label>Data Protection Contact Name</label>
    <type>TextArea</type>
</CustomField>