unpackaged/main/default/objects/Contract/fields/Data_Protection_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Phone_Number__c</fullName>
    <description>The phone number for the data protection contact.</description>
    <inlineHelpText>Enter a direct phone number where the data protection contact can be reached. Include the country code if applicable.</inlineHelpText>
    <label>Data Protection Contact Phone Number</label>
    <type>Phone</type>
</CustomField>