unpackaged/main/default/objects/Contract/fields/Invoice_Raise_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Raise_Date__c</fullName>
    <label>Invoice Raise Date</label>
    <type>TextArea</type>
</CustomField>