unpackaged/main/default/objects/Contract/fields/Legacy_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Activated_Date__c</fullName>
    <label>Legacy Activated Date</label>
    <type>DateTime</type>
</CustomField>