unpackaged/main/default/objects/Contract/fields/Legacy_ActivatedbyId__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ActivatedbyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy ActivatedbyId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>