unpackaged/main/default/objects/Contract/fields/Legacy_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contract_Number__c</fullName>
    <label>Legacy Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>