unpackaged/main/default/objects/Contract/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <description>The official name of a business as registered with the relevant authorities.</description>
    <inlineHelpText>Please enter the full legal name of the company. This should match the name on incorporation documents and any official records.</inlineHelpText>
    <label>Legal Entity Name</label>
    <type>TextArea</type>
</CustomField>