unpackaged/main/default/objects/Contract/fields/No_Response__c.field-meta.xml
<CustomField>
    <fullName>No_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether the partner has responded to contract-related requests for information. Automatically checked when the contract status changes to &#39;Requested Legal Info&#39;, &#39;Sent&#39;, or &#39;In Negotiation (Partner)&#39;, and manually unchecked when the partner replies.</description>
    <inlineHelpText>This box is checked when we are waiting for a response from the partner regarding contract negotiations. Uncheck this box manually once the partner has acknowledged or provided the requested information.</inlineHelpText>
    <label>No Response</label>
    <type>Checkbox</type>
</CustomField>