unpackaged/main/default/objects/Contract/fields/Other_Commercial_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Commercial_Terms__c</fullName>
    <description>This is for detailing any other commercial terms agreed as a part of the contract.</description>
    <inlineHelpText>This is for detailing any other commercial terms agreed as a part of the contract.</inlineHelpText>
    <label>Other Commercial Terms</label>
    <type>TextArea</type>
</CustomField>