unpackaged/main/default/objects/Contract/fields/Partner_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Partner_Signed_By__c</fullName>
    <inlineHelpText>This is for the name of the partner who signed</inlineHelpText>
    <label>Partner Signed By</label>
    <type>TextArea</type>
</CustomField>