unpackaged/main/default/objects/Contract/fields/Partner_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Signed_Date__c</fullName>
    <description>This is the date the contract is signed by the partner.</description>
    <inlineHelpText>This is the date the contract is signed by the partner.</inlineHelpText>
    <label>Partner Signed Date</label>
    <type>DateTime</type>
</CustomField>