unpackaged/main/default/objects/Contract/fields/Partner_Signed_Title__c.field-meta.xml
<CustomField>
    <fullName>Partner_Signed_Title__c</fullName>
    <description>Enter here the job title of the person signing the contract.</description>
    <inlineHelpText>Enter here the job title of the person signing the contract.</inlineHelpText>
    <label>Partner Signed Title</label>
    <type>TextArea</type>
</CustomField>