unpackaged/main/default/objects/Contract/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>