unpackaged/main/default/objects/Contract/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <inlineHelpText>Please enter the provider&#39;s level of risk and how urgent the contact is to be completed.</inlineHelpText>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red1</fullName>
            </value>
            <value>
                <fullName>RED2 [CAT1]</fullName>
            </value>
            <value>
                <fullName>RED2 [CAT2]</fullName>
            </value>
            <value>
                <fullName>RED2 [CAT3]</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>