unpackaged/main/default/objects/Contract/fields/Setup_Operation_Model__c.field-meta.xml
<CustomField>
    <fullName>Setup_Operation_Model__c</fullName>
    <inlineHelpText>Please select what business model the provider operates/is set up as.</inlineHelpText>
    <label>Setup/Operation Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner/Operator</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>