unpackaged/main/default/objects/Contract/fields/Show_Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Show_Special_Terms__c</fullName>
    <formula>Custom_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Special Terms</label>
    <type>Checkbox</type>
</CustomField>