unpackaged/main/default/objects/Contract/fields/Signed_on_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Signed_on_Related_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the contract was signed on a related account.</inlineHelpText>
    <label>Signed on Related Account</label>
    <type>Checkbox</type>
</CustomField>