unpackaged/main/default/objects/Contract/fields/Signed_on_Supplier_Portal__c.field-meta.xml
<CustomField>
    <fullName>Signed_on_Supplier_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this box if the contract was signed via the supplier portal</description>
    <inlineHelpText>Tick this box if the contract was signed via the supplier portal</inlineHelpText>
    <label>Signed on Supplier Portal</label>
    <type>Checkbox</type>
</CustomField>