unpackaged/main/default/objects/Contract/fields/Situ_Counter_Signed__c.field-meta.xml
<CustomField>
    <fullName>Situ_Counter_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box once Situ has counter signed the contract.</inlineHelpText>
    <label>Situ Counter Signed</label>
    <type>Checkbox</type>
</CustomField>