unpackaged/main/default/objects/Contract/fields/Situ_Counter_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Situ_Counter_Signed_Date__c</fullName>
    <inlineHelpText>This is the date the contract was counter singed by Situ</inlineHelpText>
    <label>Situ Counter Signed Date</label>
    <type>DateTime</type>
</CustomField>