unpackaged/main/default/objects/Contract/fields/Situ_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Situ_Signed_By__c</fullName>
    <label>Situ Signed By</label>
    <type>TextArea</type>
</CustomField>