unpackaged/main/default/objects/Contract/fields/Situ_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Situ_Signed_Date__c</fullName>
    <label>Situ Signed Date</label>
    <type>Date</type>
</CustomField>