unpackaged/main/default/objects/Contract/fields/Situ_Signed_Title__c.field-meta.xml
<CustomField>
    <fullName>Situ_Signed_Title__c</fullName>
    <label>Situ Signed Title</label>
    <type>TextArea</type>
</CustomField>