unpackaged/main/default/objects/Contract/fields/Supplier_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Account</label>
    <referenceTo>Supplier_Accounts__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>