unpackaged/main/default/objects/Contract/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <description>The name a business operates under, if different from the legal entity name.</description>
    <inlineHelpText>If the company operates under a different name than the legal entity name, please enter the trading name here. Otherwise, leave this field blank.</inlineHelpText>
    <label>Trading Name</label>
    <type>TextArea</type>
</CustomField>