unpackaged/main/default/objects/Contract/recordTypes/Integration_Contract.recordType-meta.xml
<RecordType>
    <fullName>Integration_Contract</fullName>
    <active>true</active>
    <label>Integration Contract</label>
</RecordType>