unpackaged/main/default/objects/Contract/recordTypes/Supplier_Contracts.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Contracts</fullName>
    <active>true</active>
    <label>Partner Contracts</label>
</RecordType>