unpackaged/main/default/objects/Contract/validationRules/Require_Special_Terms.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Special_Terms</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Custom_Contract__c , ISBLANK( SpecialTerms ))</errorConditionFormula>
    <errorMessage>Special Terms must be filled out when Custom Contract is checked.</errorMessage>
</ValidationRule>