unpackaged/main/default/objects/Contract/listViews/All_Client_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Client_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.Client_Contract</value>
    </filters>
    <label>All Client Contracts</label>
</ListView>