unpackaged/main/default/objects/Contract/listViews/All_Pending_Supplier_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Pending_Supplier_Contracts</fullName>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Supplier_Accounts__c</columns>
    <columns>No_Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.Supplier_Contracts</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>notEqual</operation>
        <value>Not Sent,Signed,Declined,Short Form Contract</value>
    </filters>
    <label>All Pending Supplier Contracts</label>
</ListView>