unpackaged/main/default/objects/Contract/listViews/All_Supplier_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Supplier_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Supplier_Accounts__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Contract_Type__c</columns>
    <columns>Contract_Sent_Date__c</columns>
    <columns>Risk_Status__c</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.Supplier_Contracts</value>
    </filters>
    <filters>
        <field>SALES.ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Adina</value>
    </filters>
    <label>All Supplier Contracts</label>
</ListView>