unpackaged/main/default/objects/Contract/listViews/GREEN_Suppliers.listView-meta.xml
<ListView>
    <fullName>GREEN_Suppliers</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Supplier_Accounts__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Risk_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.Supplier_Contracts</value>
    </filters>
    <filters>
        <field>Risk_Status__c</field>
        <operation>equals</operation>
        <value>Green</value>
    </filters>
    <label>GREEN Suppliers</label>
</ListView>