unpackaged/main/default/objects/Contract/listViews/Signed_on_Supplier_Portal.listView-meta.xml
<ListView>
    <fullName>Signed_on_Supplier_Portal</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.Supplier_Contracts</value>
    </filters>
    <filters>
        <field>Signed_on_Supplier_Portal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Signed on Supplier Portal</label>
</ListView>